--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -33,16 +33,6 @@
   \KOMAoptions{parskip=half}}
 \makeatother
 \usepackage{xcolor}
-\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
-\hypersetup{
-  pdftitle={The sound of teaching music: Expert pianists' performance modulations for novices},
-  pdfauthor={Atsuko Tominaga1,*, Günther Knoblich1, \& Natalie Sebanz1},
-  pdflang={en-EN},
-  pdfkeywords={teaching, expertise, skill transmission, artistic expression, music},
-  hidelinks,
-  pdfcreator={LaTeX via pandoc}}
-\urlstyle{same} % disable monospaced font for URLs
 \usepackage{graphicx}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -170,6 +160,16 @@
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\urlstyle{same} % disable monospaced font for URLs
+\hypersetup{
+  pdftitle={The sound of teaching music: Expert pianists' performance modulations for novices},
+  pdfauthor={Atsuko Tominaga1,*, Günther Knoblich1, \& Natalie Sebanz1},
+  pdflang={en-EN},
+  pdfkeywords={teaching, expertise, skill transmission, artistic expression, music},
+  hidelinks,
+  pdfcreator={LaTeX via pandoc}}
 
 \title{The sound of teaching music: Expert pianists' performance modulations for novices}
 \author{Atsuko Tominaga\textsuperscript{1,*}, Günther Knoblich\textsuperscript{1}, \& Natalie Sebanz\textsuperscript{1}}
@@ -213,7 +213,7 @@ In Experiment 1, we employed a simple musical scale to examine whether and how s
 \hypertarget{participants}{%
 \subsubsection{Participants}\label{participants}}
 
-We recruited 36 piano experts who played the piano for at least the past 10 years or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded three participants due to experimental errors, and two participants because they deviated substantially from the prescribed tempo (outside 2 standard deviations from the average tempo across participants). Thirty-one participants (15 female) were included in data analysis. Most participants were right-handed (left: 2, ambidextrous: 2) with a mean age of 24.16 (\emph{SD} = 4.26). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study (No.~2018-124) was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
+We recruited 36 piano experts who played the piano for at least the past 10 years or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded three participants due to experimental errors, and two participants because they deviated substantially from the prescribed tempo (outside 2 standard deviations from the average tempo across participants). Thirty-one participants (15 female) were included in data analysis. Most participants were right-handed (left: 2, ambidextrous: 2) with a mean age of 24.16 (\emph{SD} = 4.26). They had 12.45 years of practice on average (\emph{SD} = 5.66). 10 participants had an experience in teaching the piano (\emph{M} = 3.48 years, \emph{SD} = 3.51). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study (No.~2018-124) was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
 
 \hypertarget{apparatus-and-stimuli}{%
 \subsubsection{Apparatus and stimuli}\label{apparatus-and-stimuli}}
@@ -324,7 +324,7 @@ In Experiment 1, we employed a simple musical scale to maximise experimental con
 \hypertarget{participants-1}{%
 \subsubsection{Participants}\label{participants-1}}
 
-We recruited 21 piano experts who already had a degree (above bachelor or equivalent) in piano performance/teaching or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded one participant due to insufficient motor skills. Twenty participants (9 female) were included in the data analysis. Most participants were right-handed (left: 2) with a mean age of 25.90 (\emph{SD} = 4.68). They had 15.65 years of practice on average (\emph{SD} = 5.67). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study (No.~2018-124) was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
+We recruited 21 piano experts who already had a degree (above bachelor or equivalent) in piano performance/teaching or were studying advanced piano performance at a music school at the time of recruitment. For data analysis, we excluded one participant due to insufficient motor skills. Twenty participants (9 female) were included in the data analysis. Most participants were right-handed (left: 2) with a mean age of 25.90 (\emph{SD} = 4.68). They had 15.65 years of practice on average (\emph{SD} = 5.67). 11 participants had an experience in teaching the piano (\emph{M} = 4.14 years, \emph{SD} = 3.65). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study (No.~2018-124) was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
 
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
@@ -438,71 +438,71 @@ The present findings extend earlier research on teaching-related action modulati
 \hypertarget{refs}{}
 \begin{CSLReferences}{0}{0}
 \leavevmode\vadjust pre{\hypertarget{ref-thornton_2008}{}}%
-\CSLLeftMargin{1. }
+\CSLLeftMargin{1. }%
 \CSLRightInline{Thornton, A. \& Raihani, N. J. \href{https://doi.org/10.1016/j.anbehav.2007.12.014}{The evolution of teaching}. \emph{Animal Behaviour} \textbf{75}, 1823--1836 (2008).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-tomasello_2016}{}}%
-\CSLLeftMargin{2. }
+\CSLLeftMargin{2. }%
 \CSLRightInline{Tomasello, M. \href{https://doi.org/10.1016/j.copsyc.2015.09.008}{The ontogeny of cultural learning}. \emph{Current Opinion in Psychology} \textbf{8}, 1--4 (2016).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-brand_2002}{}}%
-\CSLLeftMargin{3. }
+\CSLLeftMargin{3. }%
 \CSLRightInline{Brand, R. J., Baldwin, D. A. \& Ashburn, L. A. \href{https://doi.org/10.1111/1467-7687.00211}{Evidence for {`motionese'}: Modifications in mothers' infant-directed action}. \emph{Developmental Science} \textbf{5}, 72--83 (2002).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-saint-georges_2013}{}}%
-\CSLLeftMargin{4. }
+\CSLLeftMargin{4. }%
 \CSLRightInline{Saint-Georges, C. \emph{et al.} \href{https://doi.org/10.1371/journal.pone.0078103}{Motherese in {Interaction}: {At} the {Cross-Road} of {Emotion} and {Cognition}? ({A Systematic Review})}. \emph{PLOS ONE} \textbf{8}, e78103 (2013).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-uther_2007}{}}%
-\CSLLeftMargin{5. }
+\CSLLeftMargin{5. }%
 \CSLRightInline{Uther, M., Knoll, M. A. \& Burnham, D. \href{https://doi.org/10.1016/j.specom.2006.10.003}{Do you speak {E-NG-L-I-SH}? {A} comparison of foreigner- and infant-directed speech}. \emph{Speech Communication} \textbf{49}, 2--7 (2007).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-mcellin_2017}{}}%
-\CSLLeftMargin{6. }
+\CSLLeftMargin{6. }%
 \CSLRightInline{McEllin, L., Knoblich, G. \& Sebanz, N. \href{https://doi.org/10.1037/xhp0000505}{Distinct kinematic markers of demonstration and joint action coordination? {Evidence} from virtual xylophone playing.} \emph{Journal of Experimental Psychology: Human Perception and Performance} \textbf{44}, 885 (2017).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-csibra_2009}{}}%
-\CSLLeftMargin{7. }
+\CSLLeftMargin{7. }%
 \CSLRightInline{Csibra, G. \& Gergely, G. \href{https://doi.org/10.1016/j.tics.2009.01.005}{Natural pedagogy}. \emph{Trends in Cognitive Sciences} \textbf{13}, 148--153 (2009).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-campisi_2013}{}}%
-\CSLLeftMargin{8. }
+\CSLLeftMargin{8. }%
 \CSLRightInline{Campisi, E. \& Özyürek, A. \href{https://doi.org/10.1016/j.pragma.2012.12.007}{Iconicity as a communicative strategy: {Recipient} design in multimodal demonstrations for adults and children}. \emph{Journal of Pragmatics} \textbf{47}, 14--27 (2013).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-fukuyama_2015}{}}%
-\CSLLeftMargin{9. }
+\CSLLeftMargin{9. }%
 \CSLRightInline{Fukuyama, H. \emph{et al.} \href{https://doi.org/10.1111/desc.12270}{Infant's action skill dynamically modulates parental action demonstration in the dyadic interaction}. \emph{Developmental Science} \textbf{18}, 1006--1013 (2015).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-schaik_2019}{}}%
-\CSLLeftMargin{10. }
+\CSLLeftMargin{10. }%
 \CSLRightInline{Schaik, J. E. van, Meyer, M., Ham, C. R. van \& Hunnius, S. \href{https://doi.org/10.1111/desc.12869}{Motion tracking of parents' infant- versus adult-directed actions reveals general and action-specific modulations}. \emph{Developmental Science} \textbf{0}, e12869 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-NIPS2016_6413}{}}%
-\CSLLeftMargin{11. }
+\CSLLeftMargin{11. }%
 \CSLRightInline{Ho, M. K., Littman, M., MacGlashan, J., Cushman, F. \& Austerweil, J. L. Showing versus doing: {Teaching} by demonstration. in \emph{Advances in neural information processing systems 29} (eds. Lee, D. D., Sugiyama, M., Luxburg, U. V., Guyon, I. \& Garnett, R.) 3027--3035 ({Curran Associates, Inc.}, 2016).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-sloboda_2000}{}}%
-\CSLLeftMargin{12. }
+\CSLLeftMargin{12. }%
 \CSLRightInline{Sloboda, J. A. \href{https://doi.org/10.1016/S1364-6613(00)01531-X}{Individual differences in music performance}. \emph{Trends in Cognitive Sciences} \textbf{4}, 397--403 (2000).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-juslin_2003}{}}%
-\CSLLeftMargin{13. }
+\CSLLeftMargin{13. }%
 \CSLRightInline{Juslin, P. N. \href{https://doi.org/10.1177/03057356030313003}{Five {Facets} of {Musical Expression}: {A Psychologist}'s {Perspective} on {Music Performance}}. \emph{Psychology of Music} \textbf{31}, 273--302 (2003).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-bresin_2000}{}}%
-\CSLLeftMargin{14. }
+\CSLLeftMargin{14. }%
 \CSLRightInline{Bresin, R. \& Battel, G. U. \href{https://doi.org/10.1076/jnmr.29.3.211.3092}{Articulation {Strategies} in {Expressive Piano Performance Analysis} of {Legato}, {Staccato}, and {Repeated Notes} in {Performances} of the {Andante Movement} of {Mozart}'s {Sonata} in {G Major} ({K} 545)}. \emph{Journal of New Music Research} \textbf{29}, 211--224 (2000).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-lindstrom_2003}{}}%
-\CSLLeftMargin{15. }
+\CSLLeftMargin{15. }%
 \CSLRightInline{Lindström, E., Juslin, P. N., Bresin, R. \& Williamon, A. \href{https://doi.org/10.1177/1321103X030200010201}{{`{Expressivity} comes from within your soul'}: {A} questionnaire study of music students' perspectives on expressivity}. \emph{Research Studies in Music Education} \textbf{20}, 23--47 (2003).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-okazaki_2019}{}}%
-\CSLLeftMargin{16. }
+\CSLLeftMargin{16. }%
 \CSLRightInline{Okazaki, S., Muraoka, Y. \& Osu, R. \href{https://doi.org/10.1038/s41598-019-44049-x}{Teacher-learner interaction quantifies scaffolding behaviour in imitation learning}. \emph{Sci Rep} \textbf{9}, 1--13 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-sperber_1995}{}}%
-\CSLLeftMargin{17. }
+\CSLLeftMargin{17. }%
 \CSLRightInline{Sperber, D. \& Wilson, D. \emph{Relevance: {Communication} and cognition, 2nd ed}. ({Blackwell Publishing}, 1995).}
 
 \end{CSLReferences}
@@ -534,17 +534,34 @@ The authors declare no competing interests.
 \hypertarget{supplementary}{%
 \section{Supplementary material}\label{supplementary}}
 
-\hypertarget{instructions-experiment-1}{%
-\subsection{Instructions (Experiment 1)}\label{instructions-experiment-1}}
+\hypertarget{instructions}{%
+\section{Instructions}\label{instructions}}
+
+\hypertarget{experiment-1-1}{%
+\subsection{Experiment 1}\label{experiment-1-1}}
 
 In the teaching condition, participants were shown the following instruction on a computer monitor (Italic sentences were highlighted in yellow colour on a black background): ``Now, play what you practised as if you were teaching it to students. Students already know how to produce the sequence of the tones and now are trying to \emph{learn how to perform the piece expressively} by listening to your performance. \emph{Do your best as a teacher to produce the piece according to the notation that you just practised.}''
 
 In the performing condition, participants were shown the following instruction on a computer monitor: ``Now, play what you practised as if you were performing it to an audience. \emph{Do your best as a performer to produce the piece according to the notation that you just practised.}''
 
-\hypertarget{instructions-experiment-2}{%
-\subsection{Instructions (Experiment 2)}\label{instructions-experiment-2}}
+\hypertarget{experiment-2-1}{%
+\subsection{Experiment 2}\label{experiment-2-1}}
 
 In the teaching condition of Experiment 2, we gave participants the exact same instruction as in Experiment 1. In the performing condition, participants were given the following instruction on a computer monitor: ``Now, play what you practised as if you were performing it to an audience. \emph{Perform the piece expressively with your interpretation. Do your best as a performer to produce the piece according to the notation that you just practised.}''
+
+\clearpage
+
+\hypertarget{variability}{%
+\section{Variability}\label{variability}}
+
+\hypertarget{data-analysis-2}{%
+\subsection{Data analysis}\label{data-analysis-2}}
+
+\hypertarget{results-experiment-1}{%
+\subsection{Results (Experiment 1)}\label{results-experiment-1}}
+
+\hypertarget{results-experiment-2}{%
+\subsection{Results (Experiment 2)}\label{results-experiment-2}}
 
 
 \end{document}
