--- a/experiment-1/analysis/stats/dynamics.Rmd
+++ b/experiment-1/analysis/stats/dynamics.Rmd
@@ -51,8 +51,6 @@ Description: This is a summary of dynamics analysis.
   + [All](#vel_diff_dyn_group_all)
   + [Trial by trial](#vel_diff_dyn_group_trial)
 
-- [Sequence plot](#sequence_dyn)
-
 ## [Articulation](#vel_articulation)
 
 ### KV
@@ -73,9 +71,9 @@ Description: This is a summary of dynamics analysis.
   + [All](#vel_diff_art_group_all)
   + [Trial by trial](#vel_diff_art_group_trial)
 
-- [Sequence plot](#sequence_art)
+### [Sequence plot](#sequence)
 
-- Additional analysis based on reviewers' comments
+- [Additional analysis based on reviewers' comments](#additional)
 
 ```{r setup, include = FALSE}
 # packages
@@ -116,14 +114,16 @@ dt_vel_diff_dyn <- dt_vel_diff[Skill == "dynamics"]
 
 ```{r vel-dyn, echo = FALSE}
 # For each individual
-vel_dyn <- dt_vel_dyn[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, Subcomponent)]
+vel_dyn_trial <- dt_vel_dyn[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Subcomponent)]
+
+vel_dyn <- vel_dyn_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill, Subcomponent)]
 vel_dyn
 ```
 
 ### Plot
 #### Box plot
 ```{r vel-dyn-box,  echo = FALSE}
-ggboxplot(dt_vel_dyn[Subcomponent == "Forte" | Subcomponent == "Piano", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, Subcomponent, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "KV (0-127)", title = "KV: Dynamics") +
+ggboxplot(vel_dyn_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "KV (0-127)", title = "KV: Dynamics") +
   facet_grid(Subcomponent ~ .)
 ```
 
@@ -138,13 +138,6 @@ vel_dyn_all
 ```
 
 ### Plot
-#### Scatter plot
-- Error bars show SEM of the mean.
-
-```{r vel-dyn-all-scatter, echo = FALSE}
-ggerrorplot(vel_dyn, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", xlab = "Condition", ylab = "KV (0-127)", title = "KV: Dynamics")
-```
-
 #### Box plot
 ```{r vel-dyn-all-box, echo = FALSE}
 vel_dyn_plot <- data.table(subject = vel_dyn[Condition == "teaching"]$SubNr, teaching = vel_dyn[Condition == "teaching"]$Mean, performing = vel_dyn[Condition == "performing"]$Mean, subcomponent = vel_dyn[Condition == "teaching"]$Subcomponent)
@@ -176,7 +169,6 @@ vel_dyn_posthoc
 
 ```{r vel-dyn-trial, echo = FALSE}
 # For each individual
-vel_dyn_trial <- dt_vel_dyn[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, Subcomponent, TrialNr)]
 vel_dyn_trial
 ```
 
@@ -221,14 +213,16 @@ ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = 
 
 ```{r vel-diff-dyn, echo = FALSE}
 # For each individual
-vel_diff_dyn <- dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent)]
+vel_diff_dyn_trial <- dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Subcomponent)]
+
+vel_diff_dyn <- vel_diff_dyn_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill, Subcomponent)]
 vel_diff_dyn
 ```
 
 ### Plot
 #### Box plot
 ```{r vel-diff-dyn-box,  echo = FALSE}
-ggboxplot(dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Dynamics") +
+ggboxplot(vel_diff_dyn_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Dynamics") +
   facet_grid(Subcomponent ~ .)
 ```
 
@@ -242,13 +236,6 @@ vel_diff_dyn_all
 ```
 
 ### Plot
-#### Scatter plot
-- Error bars show SEM of the mean.
-
-```{r vel-diff-dyn-all-scatter, echo = FALSE}
-ggerrorplot(vel_diff_dyn, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", xlab = "Condition", ylab = "Difference", title = "KV-Diff: Dynamics")
-```
-
 #### Box plot
 ```{r vel-diff-dyn-all-box, echo = FALSE}
 vel_diff_dyn_plot <- data.table(subject = vel_diff_dyn[Condition == "teaching"]$SubNr, teaching = vel_diff_dyn[Condition == "teaching"]$Mean, performing = vel_diff_dyn[Condition == "performing"]$Mean, subcomponent = vel_diff_dyn[Condition == "teaching"]$Subcomponent)
@@ -280,7 +267,6 @@ vel_diff_dyn_posthoc
 
 ```{r vel-diff-dyn-trial, echo = FALSE}
 # For each individual
-vel_diff_dyn_trial <- dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent,TrialNr)]
 vel_diff_dyn_trial
 ```
 
@@ -346,13 +332,6 @@ vel_art_all
 ```
 
 ### Plot
-#### Scatter plot
-- Error bars show SEM of the mean.
-
-```{r vel-art-all-scatter, echo = FALSE}
-ggerrorplot(vel_art, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", xlab = "Condition", ylab = "KV (0-127)", title = "KV: Articulation")
-```
-
 #### Box plot
 ```{r vel-art-all-box, echo = FALSE}
 vel_art_plot <- data.table(subject = vel_art[Condition == "teaching"]$SubNr, teaching = vel_art[Condition == "teaching"]$Mean, performing = vel_art[Condition == "performing"]$Mean, subcomponent = vel_art[Condition == "teaching"]$Subcomponent)
@@ -450,13 +429,6 @@ vel_diff_art_all
 ```
 
 ### Plot
-#### Scatter plot
-- Error bars show SEM of the mean.
-
-```{r vel-diff_art-all-scatter, echo = FALSE}
-ggerrorplot(vel_diff_art, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", xlab = "Condition", ylab = "Difference", title = "KV-Diff: Articulation")
-```
-
 #### Box plot
 ```{r vel-diff-art-all-box, echo = FALSE}
 vel_diff_art_plot <- data.table(subject = vel_diff_art[Condition == "teaching"]$SubNr, teaching = vel_diff_art[Condition == "teaching"]$Mean, performing = vel_diff_art[Condition == "performing"]$Mean, subcomponent = vel_diff_art[Condition == "teaching"]$Subcomponent)
@@ -527,6 +499,7 @@ ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", ad
   scale_x_continuous(breaks=seq(1,8,1))
 ```
 
+# Sequence plot{#sequence}
 ## Dynamics{#sequence_dyn}
 ```{r seq-dyn, fig.width = 9, fig.height = 3, echo = FALSE}
 # For each individual
@@ -555,26 +528,33 @@ ggline(vel_diff_art_seq, x = "Interval", y = "Mean", add = "mean_se", position =
   scale_x_continuous(breaks = seq(1,66,1))
 ```
 
-# Additional analysis
+# Additional analysis{#additional}
 - Normalise KV difference by the range of KV value between forte and piano for each participant.
 
 ```{r, echo = FALSE}
 # normalise diff by KV range
-vel_diff_dyn$NormalisedDiff <- 0
-for (i in unique(vel_diff_dyn$SubNr)){
-  vel_diff_dyn[SubNr == i & Condition == "teaching"]$NormalisedDiff <- vel_diff_dyn[SubNr == i & Condition == "teaching"]$Mean/(max(vel_dyn[SubNr == i & Condition == "teaching"]$Mean)-min(vel_dyn[SubNr == i & Condition == "teaching"]$Mean))
-  vel_diff_dyn[SubNr == i & Condition == "performing"]$NormalisedDiff <- vel_diff_dyn[SubNr == i & Condition == "performing"]$Mean/(max(vel_dyn[SubNr == i & Condition == "performing"]$Mean)-min(vel_dyn[SubNr == i & Condition == "performing"]$Mean))
+vel_diff_dyn_trial$NormalisedDiff <- 0
+for (i in unique(vel_diff_dyn_trial$SubNr)){
+  for (m in unique(vel_diff_dyn_trial$TrialNr)){
+    
+    vel_diff_dyn_trial[SubNr == i & TrialNr == m & Condition == "teaching"]$NormalisedDiff <- vel_diff_dyn_trial[SubNr == i & TrialNr == m & Condition == "teaching"]$Mean/(max(vel_dyn_trial[SubNr == i & TrialNr == m & Condition == "teaching"]$Mean)-min(vel_dyn_trial[SubNr == i & TrialNr == m & Condition == "teaching"]$Mean))
+    
+    vel_diff_dyn_trial[SubNr == i & TrialNr == m & Condition == "performing"]$NormalisedDiff <- vel_diff_dyn_trial[SubNr == i & TrialNr == m & Condition == "performing"]$Mean/(max(vel_dyn_trial[SubNr == i & TrialNr == m & Condition == "performing"]$Mean)-min(vel_dyn_trial[SubNr == i & TrialNr == m & Condition == "performing"]$Mean))
+    
+  }
 }
-vel_diff_dyn
+
+# each participant
+vel_diff_dyn_normalised <- vel_diff_dyn_trial[, .(N = .N, NormalisedMean = mean(NormalisedDiff), SD = sd(NormalisedDiff), SEM = sd(NormalisedDiff)/sqrt(.N)), by = .(SubNr, Condition, Skill, Subcomponent)]
 
 # group
-vel_diff_dyn_all_2 <- vel_diff_dyn[, .(N = .N, NormalisedMean = mean(NormalisedDiff), SD = sd(NormalisedDiff), SEM = sd(NormalisedDiff)/sqrt(.N)), by = .(Condition, Skill, Subcomponent)]
-vel_diff_dyn_all_2
+vel_diff_dyn_normalised_all <- vel_diff_dyn_normalised[, .(N = .N, Mean = mean(NormalisedMean), SD = sd(NormalisedMean), SEM = sd(NormalisedMean)/sqrt(.N)), by = .(Condition, Skill, Subcomponent)]
+vel_diff_dyn_normalised_all
 ```
 
 ## Plot
 ```{r, echo = FALSE}
-vel_diff_dyn_plot_2 <- data.table(subject = vel_diff_dyn[Condition == "teaching"]$SubNr, teaching = vel_diff_dyn[Condition == "teaching"]$NormalisedDiff, performing = vel_diff_dyn[Condition == "performing"]$NormalisedDiff, subcomponent = vel_diff_dyn[Condition == "teaching"]$Subcomponent)
+vel_diff_dyn_plot_2 <- data.table(subject = vel_diff_dyn_normalised[Condition == "teaching"]$SubNr, teaching = vel_diff_dyn_normalised[Condition == "teaching"]$NormalisedMean, performing = vel_diff_dyn_normalised[Condition == "performing"]$NormalisedMean, subcomponent = vel_diff_dyn_normalised[Condition == "teaching"]$Subcomponent)
 
 ggpaired(vel_diff_dyn_plot_2, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised KV (0-127)", title = "KV-Diff: Dynamics")
 ```
@@ -582,8 +562,13 @@ ggpaired(vel_diff_dyn_plot_2, cond = "performing", cond2 = "teaching", color = "
 ## Stats
 ```{r, echo = FALSE}
 # stats
-vel_diff_dyn_aov_2 <- aov_car(NormalisedDiff ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), vel_diff_dyn)
+vel_diff_dyn_aov_2 <- aov_car(NormalisedMean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), vel_diff_dyn_normalised)
 summary(vel_diff_dyn_aov_2)
+```
+
+```{r, echo = FALSE}
+vel_diff_dyn_posthoc_2 <- test(pairs(emmeans(vel_diff_dyn_aov_2,~Condition|Subcomponent), adjust = "tukey"), joint = TRUE)
+vel_diff_dyn_posthoc_2
 ```
 
 ```{r export, include = FALSE}
